--- a/lab02/docaj-biov2.html
+++ b/lab02/docaj-biov2.html
@@ -11,7 +11,12 @@
     </p>
     <h2>Personal Information</h2>
     <p>
-
+        Some of my interests are:<br> 
+        <ul><li>Travel</li><li>Sports<li>Fashion</li><li>Music</li></ul> <br>
+    </p>
+    <p>
+        I’ve been to <strong>Spain, Cuba, and Albania</strong> and look at my travel experiences as some of the best times of my life. My dream destination would be Paris, a trip which I already had booked for March 2020. The Coronavirus Pandemic might have stopped me from going then but I plan to visit the City of Lights soon.
+        That summer however I was lucky enough to work as a Tax Intern for PwC. An enriching learning experience and my first real taste of the corporate world. The internship went so well that this coming summer after my graduation I will be taking a full time position as a Tax Associate with PwC – I am really looking forward to starting my career there and exploring all the opportunities the future holds.
     </p>
     <hr>
     &copy;2020
