--- a/lab02/docaj-biov2.html
+++ b/lab02/docaj-biov2.html
@@ -11,8 +11,8 @@
     </p>
     <h2>Personal Information</h2>
     <p>
-        Some of my interests are:<br> 
-        <ul><li>Travel</li><li>Sports<li>Fashion</li><li>Music</li></ul> <br>
+        Some of my interests are:
+        <ul><li>Travel</li><li>Sports<li>Fashion</li><li>Music</li></ul> 
     </p>
     <p>
         I’ve been to <strong>Spain, Cuba, and Albania</strong> and look at my travel experiences as some of the best times of my life. My dream destination would be Paris, a trip which I already had booked for March 2020. The Coronavirus Pandemic might have stopped me from going then but I plan to visit the City of Lights soon.
