--- a/lab02/docaj-biov2.html
+++ b/lab02/docaj-biov2.html
@@ -10,9 +10,8 @@
     My name is Ernik Docaj and I am a student at Syracuse University. I currently am pursuing a double major in Finance and Accounting at the Whitman School of Management and a minor in both Economics and Information System Management. I am fascinated by investments and stock trading and hope to be working in the finance sector in the near future. But as you can see from my wide array of majors and minors that I have many interests.    
     </p>
     <h2>Personal Information</h2>
-    <p>
-        Some of my interests are:
-        <ul><li>Travel</li><li>Sports<li>Fashion</li><li>Music</li></ul> 
+    <p> Some of my interests are:
+        <ul><li>Travel</li><li>Sports<li>Fashion</li><li>Music</li></ul>
     </p>
     <p>
         I’ve been to <strong>Spain, Cuba, and Albania</strong> and look at my travel experiences as some of the best times of my life. My dream destination would be Paris, a trip which I already had booked for March 2020. The Coronavirus Pandemic might have stopped me from going then but I plan to visit the City of Lights soon.
