--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -14,5 +14,5 @@
             <a href="mailto:edocaj@syr.edu">Ernik Docaj's Email</a>
         </p>
     </body>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.150708027668!2d-76.1358487845606!3d43.03826047914714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fb431fe7f%3A0xcec3fe2ca38dd861!2sAdministrative%20Services%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1614452872238!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.1526945832416!2d-76.1355650845221!3d43.03821867914717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fca155555%3A0xc1c69e4f641652c1!2sSyracuse%20University%20iSchool!5e0!3m2!1sen!2sus!4v1614454166068!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </html>
