--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -25,7 +25,7 @@
             <label for="business">Is this a business enquiry?</label>
             <input type="checkbox" name="business" id="business" value="Yes"><br>
 
-            <input type="submit" value="Send Form">
+            <input type="submit" value="Send Email">
         </form>
     </body>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.1526945832416!2d-76.1355650845221!3d43.03821867914717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fca155555%3A0xc1c69e4f641652c1!2sSyracuse%20University%20iSchool!5e0!3m2!1sen!2sus!4v1614454166068!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
