--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -20,7 +20,7 @@
             <br>
 
             <label for="body">Reason for contacting:</label><br>
-            <textarea name="body" id="body" row="20"cols="100"> What do you want? </textarea><br>
+            <textarea name="body" id="body" rows="20" cols="100"> What do you want? </textarea><br>
 
             <label for="business">Is this a business enquiry?</label>
             <input type="checkbox" name="business" id="business" value="Yes"><br>
