--- a/lab05/contact.html
+++ b/lab05/contact.html
@@ -10,7 +10,7 @@
         <p>
             Ernik Docaj<br>
             343 Hinds Hall, Syracuse, NY 13210<br>
-            <a href="https://www.linkedin.com/in/ernikdocaj/">My LinkedIn Profile<img src="../images/logo-sized.png" alt="LinkedIn Logo"></a>
+            <a href="https://www.linkedin.com/in/ernikdocaj/">My LinkedIn Profile<img src="../images/logo-sized.png" alt="LinkedIn Logo"></a><br>
             <a href="mailto:edocaj@syr.edu">Ernik Docaj's Email</a>
         </p>
         <form action="mailto:edocaj@syr.edu" method="POST">
