--- a/lab05/docaj-biov2.html
+++ b/lab05/docaj-biov2.html
@@ -6,6 +6,7 @@
 </head>
 <body> 
     <h1>Ernik Docaj's Biography</h1>
+    <img src="../images/biographypicture.png" alt="Biography picture">
     <p>
     My name is Ernik Docaj and I am a student at Syracuse University. I currently am pursuing a double major in Finance and Accounting at the Whitman School of Management and a minor in both Economics and Information System Management. I am fascinated by investments and stock trading and hope to be working in the finance sector in the near future. But as you can see from my wide array of majors and minors that I have many interests.    
     </p>
