--- a/lab06/contact.html
+++ b/lab06/contact.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Unit 3 Notes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
