--- a/lab06/docaj-biov2.html
+++ b/lab06/docaj-biov2.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset='utf-8'>
 <title>Ernik Docaj-Bio</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body> 
     <h1>Ernik Docaj's Biography</h1>
