--- a/lab06/skills.html
+++ b/lab06/skills.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Skills</title>
+        <link rel="stylesheet" href="styles.css">
         <style>
             table,th,td {border: 1px solid black;}
         </style>
@@ -15,7 +16,7 @@
                 <th>Name</th>
                 <th>Level of Expertise</th>
             </tr>
-        <tr>
+        <tr class="evenrow">
             <td>Techical</td>
             <td>Microsoft Word</td>
             <td>Proficient</td>
@@ -25,7 +26,7 @@
             <td>Microsoft Excel</td>
             <td>Proficient</td>
         </tr>
-        <tr>
+        <tr class="evenrow">
             <td>Techical</td>
             <td>Microsoft Powerpoint</td>
             <td>Proficient</td>
@@ -35,7 +36,7 @@
             <td>RStudio</td>
             <td>Intermediate</td>
         </tr>
-        <tr>
+        <tr class="evenrow">
             <td>Coding</td>
             <td>HTML</td>
             <td>Beginner</td>
@@ -45,7 +46,7 @@
             <td>English</td>
             <td>Proficient</td>
         </tr>
-        <tr>
+        <tr class="evenrow">
             <td>Language</td>
             <td>Spanish</td>
             <td>Beginner</td>
@@ -55,7 +56,7 @@
             <td>Albanian</td>
             <td>Intermediate</td>
         </tr>
-        <tr>
+        <tr class="evenrow">
             <td>Professional</td>
             <td>Leadership</td>
             <td>Intermediate</td>
