--- a/lab06/contact.html
+++ b/lab06/contact.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Unit 3 Notes</title>
+        <title>Contact Page</title>
+
         <link rel="stylesheet" href="styles.css">
+
     </head>
 
     <body>
