--- a/lab06/docaj-biov2.html
+++ b/lab06/docaj-biov2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset='utf-8'>
-<title>Ernik Docaj-Bio</title>
+<title>Ernik Docaj Bio</title>
 
 <link rel="stylesheet" href="styles.css">
 
