--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -10,9 +10,9 @@
 
     <body>
         <nav>
-            <a href="index.html" tabindex="1">Home</a> <span>|</span>
-            <a href="contact.html" tabindex="2">Contact</a><span>|</span>
-            <a href="skills.html" tabindex="3">Skills</a>
+            <a href="index.html" tabindex="1"><strong>Home</strong></a> <span>|</span>
+            <a href="contact.html" tabindex="2"><strong>Contact</strong></a><span>|</span>
+            <a href="skills.html" tabindex="3"><strong>Skills</strong></a>
         </nav> 
 
         <a href="#maincontact" id="skip">Skip to Content</a>
