--- a/lab10/skills.html
+++ b/lab10/skills.html
@@ -14,9 +14,9 @@
     <body>
         <header>
             <nav>
-                <a href="index.html">Home</a><span>|</span>
-                <a href="contact.html">Contact</a><span>|</span>
-                <a href="skills.html">Skills</a>
+                <a href="index.html" tabindex="1"><strong>Home</strong></a> <span>|</span>
+                <a href="contact.html" tabindex="2"><strong>Contact</strong></a><span>|</span>
+                <a href="skills.html" tabindex="3"><strong>Skills</strong></a>
             </nav> 
         </header>
 
