--- a/projectfolder/index.html
+++ b/projectfolder/index.html
@@ -18,12 +18,13 @@
             </nav>
         </header>
 
+        <h1>Parts Unknow</h1>
+
         <main>
             <!-- This will be a slide show and breif description of each post available on the site-->
             <img src="projectimages/covidpic4.jpg" alt="a women sitting on her luggage at the airport during the Covid pandemic">
             <img src="projectimages/cubapic3.JPG" alt="classic cars with fresh and colorful paintjobs parked outside a colonial building in Havana">
             <img src="projectimages/hk-bg.jpg" alt="The Hong Kong island skyline at night">
-            <section>
                 <p>
                     Traveling has never been harder and we at Parts Unknow feel its our duty as a travel site to inform you how best to deal with the current pandemic and its restricts without having to give up something we all love. Staying up to date on the regulations and restrictions can save you a ton of headache and ensure that your traveling safely.
                 </p>
@@ -35,7 +36,6 @@
                 <p>
                     Asia World City, Hong Kong is one of the worlds most visited tourist destinations and for good reason. Learn more about the must see attractions and the hidden gems that are located off the beaten track in our post about Hong Kong!
                 </p>
-            </section>
         </main>
     </body>
 </html>
