First Draft attempt 1

--- a/projectfolder/cuba.html
+++ b/projectfolder/cuba.html
@@ -3,18 +3,20 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Parts Unknow - Cuba</title>
-
+        <title>Parts Unknown - Cuba</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <header>
             <nav>
-                <a href="index.html" tabindex="1"><strong>Home</strong></a> <span>|</span>
-                <a href="covid.html" tabindex="2"><strong>Covid Travel Guidelines</strong></a><span>|</span>
-                <a href="hk.html" tabindex="3"><strong>Hong Kong</strong></a><span>|</span>
-                <a href="cuba.html" tabindex="4"><strong>Cuba</strong></a>
-                <input type="text" placeholder="Search..">
+                    <a href="index.html" tabindex="2"><strong>HOME</strong></a> <span>|</span>
+                    <a href="covid.html" tabindex="3"><strong>COVID TRAVEL GUIDELINES</strong></a> <span>|</span>
+                    <a href="hk.html" tabindex="4"><strong>HONG KONG</strong></a> <span>|</span>
+                    <a href="cuba.html" tabindex="5"><strong>CUBA</strong></a>
+                <div class="search">
+                    <input type="text" placeholder="Search..">
+                </div>
             </nav>
         </header>
 
@@ -22,7 +24,9 @@
 
         <main>
 
-            <h1>Cuba</h1>
+            <div id="title">
+            <h1>CUBA</h1>
+            </div>
 
             <p>
                 Once the leading tourist destination of the Caribbean, Cuba is once again open to Americas after a half a decade long travel ban between the two countries is lifted. Cuba now is very different, having spent years in isolation and under the communist regime but the charm of the country is something that’ll never change.
