--- a/projectfolder/hk.html
+++ b/projectfolder/hk.html
@@ -3,27 +3,35 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Parts Unknow - Hong Kong</title>
-
+        <title>Parts Unknown - Hong Kong</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <header>
             <nav>
-                <a href="index.html" tabindex="1"><strong>Home</strong></a> <span>|</span>
-                <a href="covid.html" tabindex="2"><strong>Covid Travel Guidelines</strong></a><span>|</span>
-                <a href="hk.html" tabindex="3"><strong>Hong Kong</strong></a><span>|</span>
-                <a href="cuba.html" tabindex="4"><strong>Cuba</strong></a>
-                <input type="text" placeholder="Search..">
+                    <a href="index.html" tabindex="2"><strong>HOME</strong></a> <span>|</span>
+                    <a href="covid.html" tabindex="3"><strong>COVID TRAVEL GUIDELINES</strong></a> <span>|</span>
+                    <a href="hk.html" tabindex="4"><strong>HONG KONG</strong></a> <span>|</span>
+                    <a href="cuba.html" tabindex="5"><strong>CUBA</strong></a>
+                <div class="search">
+                    <input type="text" placeholder="Search..">
+                </div>
             </nav>
         </header>
+
+        <a href="#maincontent" id="skip" tabindex="1">Skip to Content</a>
 
         <img src="projectimages/hk-bg.jpg" alt="The Hong Kong island skyline at night">
 
         <main>
 
-            <h1>Hong Kong</h1>
+            <a id="maincontent"></a>
 
+            <div id="title">
+            <h1>HONG KONG</h1>
+            </div>
+            
             <p>
                 Known as “Asia’s World City”, Hong Kong is one of the continents busiest and culturally diverse cities. Everything from tall skyscrapers, to bustling markets, and buddha statues can be found on tiny yet densely populated harbor city. Serving as a meeting point for western and eastern culture for centuries, it is unlike any other city in the world due to its unique cultural blend. A long-standing British colony Hong Kong was returned to China in 1997 and has served as a special administrative region since. Not subject to the same laws and regulations as mainland China, Hong Kong has maintained and facilitated the further growth of its city as a major trading and business center.
             </p>
