--- a/projectfolder/index.html
+++ b/projectfolder/index.html
@@ -37,8 +37,8 @@
                     <a href="hk.html" tabindex="4"><strong>HONG KONG</strong></a> <span>|</span>
                     <a href="cuba.html" tabindex="5"><strong>CUBA</strong></a>
                 <div class="search">
-                    <label>Searchbar:</label>
-                    <input type="text" placeholder="Search..">
+                    <label for="searchbar">Searchbar:</label>
+                    <input type="text" placeholder="Search.." id="searchbar">
                 </div>
             </nav>
         </header>
