--- a/projectfolder/index.html
+++ b/projectfolder/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Parts Unknown - Home</title>
+        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
         <link rel="stylesheet" href="styles.css">
         <script>
             function PicturesOff() {
