--- a/projectfolder/hk.html
+++ b/projectfolder/hk.html
@@ -6,6 +6,10 @@
         <title>Parts Unknown - Hong Kong</title>
         <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
         <link rel="stylesheet" href="styles.css">
+
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Lato:wght@300&display=swap" rel="stylesheet">
+
     </head>
 
     <body>
