--- a/projectfolder/index.html
+++ b/projectfolder/index.html
@@ -6,6 +6,10 @@
         <title>Parts Unknown - Home</title>
         <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
         <link rel="stylesheet" href="styles.css">
+
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Lato:wght@300&display=swap" rel="stylesheet">
+
         <script>
             function PicturesOff() {
                 document.getElementById('homecovid').style.display = 'none';
