fixing the skip to content button

--- a/projectfolder/cuba.html
+++ b/projectfolder/cuba.html
@@ -22,12 +22,16 @@
             </nav>
         </header>
 
+        <a href="#maincontent" id="skip" tabindex="1">Skip to Content</a>
+
         <div class="cubatext">
             <main>
             
                 <div id="title">
                 <h1>CUBA</h1>
                 </div>
+
+                <a id="maincontent"></a>
 
                 <p>
                     Once the leading tourist destination of the Caribbean, Cuba is once again open to Americas after a half a decade long travel ban between the two countries is lifted. Cuba now is very different, having spent years in isolation and under the communist regime but the charm of the country is something that’ll never change.
